@@ -16,6 +16,11 @@ namespace ChummerHub.Data
 
         }
 
+        public ApplicationDbContext()
+        {
+            
+        }
+
         protected override void OnModelCreating(ModelBuilder builder)
         {
             base.OnModelCreating(builder);
