@@ -3,6 +3,7 @@ using System;
 using System.Collections.Generic;
 using System.ComponentModel.DataAnnotations;
 using System.ComponentModel.DataAnnotations.Schema;
+using System.Diagnostics;
 using System.Linq;
 using System.Runtime.Serialization;
 using System.Threading.Tasks;
@@ -10,6 +11,7 @@ using System.Xml.Serialization;
 
 namespace ChummerHub.Models.V1
 {
+    [DebuggerDisplay("Tag {TagComment}: {TagName} ({TagValue})")]
     public class Tag
     {
         [Key]
@@ -90,6 +92,7 @@ namespace ChummerHub.Models.V1
         [XmlIgnore]
         [JsonIgnore]
         [NotMapped]
+       
         public string Display
         {
             get
